--- a/pickup/index.html
+++ b/pickup/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="section">
             <div id="step1">
-                <span class="step-highlight">Step 1:</span> Scan or upload your QR code. 
+                <span class="step-highlight">Step 1:</span> Upload your QR code. Taking a screenshot and it will work.
                 <div id="my-qr-reader">
                 </div>
             </div>
