--- a/pickup/index.html
+++ b/pickup/index.html
@@ -27,7 +27,7 @@
             </div>
             </div>
             <div id="step1">
-                <span class="step-highlight">Step 2:</span> Take a screenshot of the PDF with the QR code and upload the image. 
+                <span class="step-highlight">Step 2:</span> Scan the QR code using your camera. You may need to enable the camera for Chrome (Settings -> Chrome -> Camera).
                 <div id="my-qr-reader">
                 </div>
             </div>
